# deathly-hallows-portrait-generator

./: README.md  index.html  sketch.js
asciiConverter/: .gitignore  CMakeLists.txt
asciiConverter/include/: asciiConverterUtils.hpp
asciiConverter/src/: asciiConverterUtils.cpp  image2ascii.cpp  video2ascii.cpp
christmasTrees/: index.html  sketch.js
conwaysGameOfLife/: index.html  sketch.js
deathlyHallowsPortrait/: index.html
naturalSelection/: index.html  sketch.js
perlinTerrain/: index.html  sketch.js
rain/: index.html  sketch.js
skewedGrid/: index.html  sketch.js
solarSystem/: index.html  sketch.js
stipple/: index.css  index.html  sketch.js
